--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "*": [
         "node_modules/*",
-        "src/types/*"
+        "types/*"
       ]
     },
     "resolveJsonModule": true,
@@ -24,6 +24,7 @@
   ],
   "include": [
     "src/**/*",
-    "index.ts"
+    "types/**/*",
+    "main.ts"
   ]
 }
