--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "vola-cli",
   "version": "0.1.0",
   "description": "用于搭建 vite + vue3 项目的脚手架工具",
-  "main": "index.js",
+  "main": "dist/lib/library.js",
+  "bin": {
+    "vola": "./bin/vola"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node main.ts",
+    "clean": "rimraf dist",
+    "dev": "npm run clean && tsc -w --removeComments false",
+    "vola": "node ./bin/vola",
+    "prepublish": "npm run clean && tsc --sourceMap false",
     "commit": "git add . && git-cz && git push origin"
   },
   "repository": {
@@ -26,36 +32,35 @@
   "homepage": "https://github.com/Alessandro-Pang/vola-cli#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "chalk": "^5.0.1",
-    "commander": "^9.4.0",
-    "cross-spawn": "^7.0.3",
+    "chalk": "4.1.2",
+    "commander": "9.4.0",
+    "cross-spawn": "7.0.3",
     "figlet": "^1.5.2",
     "inquirer": "^9.1.2",
     "node-emoji": "^1.11.0",
     "ora": "^6.1.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-angular": "^17.1.0",
-    "@types/node": "^18.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.36.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "cz-customizable": "^7.0.0",
-    "eslint": "^8.0.1",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-angular": "17.1.0",
+    "@types/node": "18.7.14",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.36.1",
+    "cz-conventional-changelog": "3.3.0",
+    "cz-customizable": "7.0.0",
+    "eslint": "8.0.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.0.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.0.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
-    "node-ts": "^5.1.2",
     "prettier": "2.7.1",
-    "standard-version": "^9.5.0",
-    "ts-node": "^10.9.1",
+    "rimraf": "3.0.2",
+    "standard-version": "9.5.0",
     "typescript": "*"
   },
   "lint-staged": {
