--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "18.7.14",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.36.1",
+    "conventional-changelog": "^3.1.25",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "7.0.0",
     "eslint": "8.0.1",
