--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vola-cli",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "用于搭建 vite + vue3 项目的脚手架工具",
   "main": "dist/lib/library.js",
   "bin": {
@@ -11,9 +11,9 @@
     "clean": "rimraf dist",
     "dev": "npm run clean && tsc -w --removeComments false",
     "vola": "node ./bin/vola",
-    "prepublish": "npm run clean && tsc --sourceMap false",
+    "prepublish": "npm run clean && tsc",
     "commit": "git add . && git-cz && git push origin",
-    "release": "standard-version"
+    "release": "node ./scripts/release.js"
   },
   "repository": {
     "type": "git",
@@ -37,18 +37,20 @@
     "commander": "9.4.0",
     "cross-spawn": "7.0.3",
     "figlet": "^1.5.2",
-    "inquirer": "^9.1.2",
+    "inquirer": "9.0.1",
     "node-emoji": "^1.11.0",
-    "ora": "^6.1.2"
+    "ora": "^6.1.2",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-angular": "17.1.0",
+    "@types/inquirer": "^9.0.1",
     "@types/node": "18.7.14",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.36.1",
-    "conventional-changelog": "^3.1.25",
-    "cz-conventional-changelog": "3.3.0",
+    "conventional-changelog-cli": "^2.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "7.0.0",
     "eslint": "8.0.1",
     "eslint-config-airbnb-base": "15.0.0",
@@ -74,7 +76,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "./node_modules/cz-conventional-changelog"
     },
     "cz-customizable": {
       "config": "./.cz-config.cjs"
